<resources>
    <string name="app_name">HábitoRed</string>

    <!-- Login -->
    <string name="login_title">Inicio de Sesión</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="no_account_register">¿No tienes cuenta? Regístrate</string>

    <!-- Register -->
    <string name="register_title">Registro de Usuario</string>
    <string name="name_hint">Nombre completo</string>
    <string name="register_button">Registrarse</string>
    <string name="already_have_account">¿Ya tienes cuenta? Inicia sesión</string>

    <!-- Home -->
    <string name="home_title">Mis Hábitos</string>
    <string name="add_habit">Agregar Hábito</string>
    <string name="greeting">¡Hola, %1$s!</string>
    <string name="greeting_default">¡Hola, Usuario!</string>

    <!-- Settings -->
    <string name="pref_username_title">Nombre de usuario</string>
    <string name="pref_username_dialog">Ingresa tu nombre</string>
    <string name="pref_notifications_title">Notificaciones</string>

    <!-- Menu Home -->
    <string name="action_settings">Configuración</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="menu_suggestions">Sugerencias</string>

    <!-- Add Habit -->
    <string name="add_habit_title">Add New Habit</string>
    <string name="habit_name_hint">Habit Name</string>
    <string name="habit_category_hint">Habit Category</string>
    <string name="scan_text_button">Scan Text</string>
    <string name="save_habit_button">Save Habit</string>


    <!-- Habit Detail -->
    <string name="habit_detail_title">Detalle del Hábito</string>
    <string name="habit_name_label">Nombre:</string>
    <string name="habit_category_label">Categoría:</string>
    <string name="mark_complete_button">Marcar como completado</string>

    <!-- Suggestions -->
    <string name="suggestions_title">Sugerencias de Hábitos</string>
    <string name="add_habit_button">Add</string>
    <string name="goal_periodicity_e_g_daily">Goal Periodicity (e.g. daily)</string>
    <string name="save_habit">Save Habit</string>
    <string name="unit_type_e_g_minutes">Unit Type (e.g. minutes)</string>
    <string name="goal_value">Goal Value</string>
    <string name="area_optional">Area (optional)</string>
    <string name="recurrence_e_g_daily">Recurrence (e.g. daily)</string>
    <string name="habit_name">Habit Name</string>
    <string name="scan_text">Scan Text</string>
    <string name="create_new_habit">Create New Habit</string>
    <string name="greetinh">¡Hola, usuario!</string>
</resources>
