<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <nl.dionsegijn.konfetti.xml.KonfettiView
            android:id="@+id/konfettiView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_detail_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="24dp" />

        <TextView
            android:id="@+id/tvHabitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_name_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/tvHabitCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_category_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:paddingBottom="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMarkComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_complete_button" />
    </LinearLayout>
</ScrollView>
